--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "dependencies": {
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-communications": "^2.2.1",
     "react-native-emoji": "^1.3.1",
-    "react-native-looped-carousel": "^0.1.13",
     "react-native-parsed-text": "^0.0.20",
-    "spliddit": "^2.1.1"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
