--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-native": "0.53.3",
     "react-native-communications": "^2.2.1",
     "react-native-emoji": "^1.3.1",
-    "react-native-parsed-text": "^0.0.20",
+    "react-native-parsed-text": "^0.0.20"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
