--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "chat_ui",
+  "name": "react-native-chat-ui",
   "version": "0.0.1",
-  "private": true,
+  "description": "一款react native 聊天UI框架",
+  "main": "index.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/25juan/react-native-chat-ui.git"
+  },
+  "keywords": [
+    "react-native",
+    "chat"
+  ],
+  "author": "25juan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/25juan/react-native-chat-ui/issues"
+  },
+  "homepage": "https://github.com/25juan/react-native-chat-ui#readme",
   "dependencies": {
     "moment": "^2.22.2",
-    "prop-types": "^15.6.2",
-    "react": "16.2.0",
-    "react-native": "0.53.3",
     "react-native-emoji": "^1.3.1",
     "react-native-parsed-text": "^0.0.20"
-  },
-  "devDependencies": {
-    "babel-jest": "23.4.2",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.5.0",
-    "react-test-renderer": "16.2.0"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
