--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.1"
+    "react-native": "0.52.1",
+    "react-native-chat-ui": "git+https://github.com/25juan/react-native-chat-ui.git"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
